fix bug with vertical scrollbar

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 body {
     overflow-x: hidden;
     font-family: arial, helvetica, sans-serif;
-    overflow: hidden;
     color: #6f6f6f;
     font-size: 15px;
     padding: 5px;
